--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -147,11 +147,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Player.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\obj\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="src\obj\Player.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SuperNova.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="src\img\astronaut.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
