--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -147,11 +147,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\obj\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\obj\Player.h" />
