Added Walking Animation to Sprite
Added a cycle of frames whenever astronaut moves, also decreased size and increased movement speed.

--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\img\astronaut.png" />
+    <Image Include="src\img\astronaut_walk.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
