--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -153,10 +153,12 @@
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\obj\Player.cpp" />
+    <ClCompile Include="src\obj\TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\obj\Player.h" />
+    <ClInclude Include="src\obj\TileMap.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SuperNova.rc" />
@@ -164,6 +166,7 @@
   <ItemGroup>
     <Image Include="src\img\astronaut.png" />
     <Image Include="src\img\astronaut_walk.png" />
+    <Image Include="src\img\testTileSet.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
