--- a/SuperNova/SuperNova.vcxproj.filters
+++ b/SuperNova/SuperNova.vcxproj.filters
@@ -24,4 +24,7 @@
     <Image Include="src\resources\astronaut_walk.png" />
     <Image Include="src\resources\testTileSet.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="src\resources\background_music.wav" />
+  </ItemGroup>
 </Project>
