--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="src\objects\TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Components.h" />
     <ClInclude Include="src\GameEngine.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\Entity.h" />
