--- a/SuperNova/SuperNova.vcxproj.filters
+++ b/SuperNova/SuperNova.vcxproj.filters
@@ -8,15 +8,17 @@
     <ClCompile Include="src\Vector2.cpp" />
     <ClCompile Include="src\objects\TileMap.cpp" />
     <ClCompile Include="src\GameEngine.cpp" />
+    <ClCompile Include="src\LevelManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
-    <ClInclude Include="src\Entity.h" />
-    <ClInclude Include="src\EntityManager.h" />
-    <ClInclude Include="src\objects\Player.h" />
-    <ClInclude Include="src\Vector2.h" />
-    <ClInclude Include="src\objects\TileMap.h" />
-    <ClInclude Include="src\GameEngine.h" />
+    <ClInclude Include="src\headers\Entity.h" />
+    <ClInclude Include="src\headers\EntityManager.h" />
+    <ClInclude Include="src\headers\Player.h" />
+    <ClInclude Include="src\headers\Vector2.h" />
+    <ClInclude Include="src\headers\TileMap.h" />
+    <ClInclude Include="src\headers\GameEngine.h" />
+    <ClInclude Include="src\headers\LevelManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SuperNova.rc" />
