--- a/SuperNova/SuperNova.vcxproj.filters
+++ b/SuperNova/SuperNova.vcxproj.filters
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\Entity.cpp" />
-    <ClCompile Include="src\EntityManager.cpp" />
+    <ClCompile Include="src\classes\Entity.cpp" />
+    <ClCompile Include="src\classes\EntityManager.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\objects\Player.cpp" />
-    <ClCompile Include="src\Vector2.cpp" />
-    <ClCompile Include="src\objects\TileMap.cpp" />
-    <ClCompile Include="src\GameEngine.cpp" />
-    <ClCompile Include="src\LevelManager.cpp" />
+    <ClCompile Include="src\classes\Player.cpp" />
+    <ClCompile Include="src\classes\Vector2.cpp" />
+    <ClCompile Include="src\classes\TileMap.cpp" />
+    <ClCompile Include="src\classes\GameEngine.cpp" />
+    <ClCompile Include="src\classes\LevelManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
