--- a/SuperNova/SuperNova.vcxproj.filters
+++ b/SuperNova/SuperNova.vcxproj.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="src\classes\TileMap.cpp" />
     <ClCompile Include="src\classes\GameEngine.cpp" />
     <ClCompile Include="src\classes\LevelManager.cpp" />
+    <ClCompile Include="src\classes\SpriteManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -19,6 +20,7 @@
     <ClInclude Include="src\headers\TileMap.h" />
     <ClInclude Include="src\headers\GameEngine.h" />
     <ClInclude Include="src\headers\LevelManager.h" />
+    <ClInclude Include="src\headers\SpriteManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SuperNova.rc" />
