--- a/SuperNova/SuperNova.vcxproj.filters
+++ b/SuperNova/SuperNova.vcxproj.filters
@@ -1,46 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="src\classes\LevelManager.cpp" />
+    <ClCompile Include="src\classes\GameEngine.cpp" />
     <ClCompile Include="src\classes\Entity.cpp" />
     <ClCompile Include="src\classes\EntityManager.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\classes\Player.cpp" />
     <ClCompile Include="src\classes\Vector2.cpp" />
     <ClCompile Include="src\classes\TileMap.cpp" />
-    <ClCompile Include="src\classes\GameEngine.cpp" />
-    <ClCompile Include="src\classes\LevelManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\headers\LevelManager.h" />
+    <ClInclude Include="src\headers\GameEngine.h" />
     <ClInclude Include="resource.h" />
-<<<<<<< HEAD
-    <ClInclude Include="src\Entity.h" />
-    <ClInclude Include="src\EntityManager.h" />
-    <ClInclude Include="src\objects\Player.h" />
-    <ClInclude Include="src\Vector2.h" />
-    <ClInclude Include="src\objects\TileMap.h" />
-    <ClInclude Include="src\GameEngine.h" />
-    <ClInclude Include="src\Components.h" />
-=======
     <ClInclude Include="src\headers\Entity.h" />
     <ClInclude Include="src\headers\EntityManager.h" />
     <ClInclude Include="src\headers\Player.h" />
     <ClInclude Include="src\headers\Vector2.h" />
     <ClInclude Include="src\headers\TileMap.h" />
-    <ClInclude Include="src\headers\GameEngine.h" />
-    <ClInclude Include="src\headers\LevelManager.h" />
->>>>>>> main
+    <ClInclude Include="src\headers\Components.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SuperNova.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="src\resources\astronaut.png" />
-    <Image Include="src\resources\astronaut_walk.png" />
-    <Image Include="src\resources\testTileSet.png" />
-    <Image Include="src\resources\rocket_sprite_sheet.png" />
-    <Image Include="src\resources\space_background_sprite_sheet.png" />
+    <Media Include="src\resources\background_music.wav" />
   </ItemGroup>
   <ItemGroup>
-    <Media Include="src\resources\background_music.wav" />
+    <Image Include="src\resources\astronaut.png" />
+    <Image Include="src\resources\astronaut_walk.png" />
+    <Image Include="src\resources\rocket_sprite_sheet.png" />
+    <Image Include="src\resources\space_background_sprite_sheet.png" />
+    <Image Include="src\resources\testTileSet.png" />
   </ItemGroup>
 </Project>
