--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -151,24 +151,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\classes\Sprite.cpp" />
     <ClCompile Include="src\classes\LevelManager.cpp" />
     <ClCompile Include="src\classes\GameEngine.cpp" />
     <ClCompile Include="src\classes\Entity.cpp" />
     <ClCompile Include="src\classes\EntityManager.cpp" />
-    <ClCompile Include="src\classes\SpriteManager.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\classes\Player.cpp" />
     <ClCompile Include="src\classes\Vector2.cpp" />
     <ClCompile Include="src\classes\TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\headers\Sprite.h" />
     <ClInclude Include="src\headers\LevelManager.h" />
     <ClInclude Include="src\headers\GameEngine.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\headers\Entity.h" />
     <ClInclude Include="src\headers\EntityManager.h" />
     <ClInclude Include="src\headers\Player.h" />
-    <ClInclude Include="src\headers\SpriteManager.h" />
     <ClInclude Include="src\headers\Vector2.h" />
     <ClInclude Include="src\headers\TileMap.h" />
   </ItemGroup>
