--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -181,6 +181,7 @@
     <Image Include="src\resources\astronaut_walk.png" />
     <Image Include="src\resources\Level1Button.png" />
     <Image Include="src\resources\Level2Button.png" />
+    <Image Include="src\resources\pixiguide.png" />
     <Image Include="src\resources\rocket_sprite_sheet.png" />
     <Image Include="src\resources\space_background_sprite_sheet.png" />
     <Image Include="src\resources\testTileSet.png" />
