--- a/SuperNova/SuperNova.vcxproj.filters
+++ b/SuperNova/SuperNova.vcxproj.filters
@@ -12,6 +12,7 @@
     <ClCompile Include="src\classes\GameEngine.cpp" />
     <ClCompile Include="src\classes\LevelManager.cpp" />
     <ClCompile Include="src\classes\Sprite.cpp" />
+    <ClCompile Include="src\classes\StoryManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\headers\LevelManager.h" />
@@ -26,6 +27,7 @@
     <ClInclude Include="src\headers\LevelManager.h" />
     <ClInclude Include="src\headers\Sprite.h" />
     <ClInclude Include="src\headers\Components.h" />
+    <ClInclude Include="src\headers\StoryManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SuperNova.rc" />
