--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -190,6 +190,9 @@
   <ItemGroup>
     <Media Include="src\resources\background_music.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\Downloads\openal32.dll" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
