--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -188,6 +188,7 @@
     <Image Include="src\resources\space_background_sprite_sheet.png" />
     <Image Include="src\resources\testTileSet.png" />
     <Image Include="src\resources\tilemap_v2.png" />
+    <Image Include="src\resources\tilemap_v3.png" />
     <Image Include="src\resources\waterfall_background.png" />
   </ItemGroup>
   <ItemGroup>
