--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -183,6 +183,7 @@
     <Image Include="src\resources\astronaut_walk.png" />
     <Image Include="src\resources\Level1Button.png" />
     <Image Include="src\resources\Level2Button.png" />
+    <Image Include="src\resources\logo_screen.png" />
     <Image Include="src\resources\pixiguide.png" />
     <Image Include="src\resources\rocket_sprite_sheet.png" />
     <Image Include="src\resources\space_background_sprite_sheet.png" />
