--- a/SuperNova/SuperNova.vcxproj
+++ b/SuperNova/SuperNova.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\classes\Object.cpp" />
     <ClCompile Include="src\classes\Sprite.cpp" />
     <ClCompile Include="src\classes\LevelManager.cpp" />
     <ClCompile Include="src\classes\GameEngine.cpp" />
@@ -163,6 +164,7 @@
     <ClCompile Include="src\classes\StoryManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\headers\Object.h" />
     <ClInclude Include="src\headers\Sprite.h" />
     <ClInclude Include="src\headers\Components.h" />
     <ClInclude Include="src\headers\LevelManager.h" />
