--- a/SuperNova/SuperNova.vcxproj.filters
+++ b/SuperNova/SuperNova.vcxproj.filters
@@ -13,6 +13,7 @@
     <ClCompile Include="src\classes\LevelManager.cpp" />
     <ClCompile Include="src\classes\Sprite.cpp" />
     <ClCompile Include="src\classes\StoryManager.cpp" />
+    <ClCompile Include="src\classes\Object.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\headers\LevelManager.h" />
@@ -28,6 +29,7 @@
     <ClInclude Include="src\headers\Sprite.h" />
     <ClInclude Include="src\headers\Components.h" />
     <ClInclude Include="src\headers\StoryManager.h" />
+    <ClInclude Include="src\headers\Object.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SuperNova.rc" />
